Version 2.1.130
    Fixed a bug that prevented Repair from working on the new Netherite weapons/armors
    mcMMO will now run a script to fix a misspelling of netherite in repair/salvage configs (script only runs once and then never again)


    NOTES:
    Early versions of 1.16 support had Netherite misspelled, the script I added executes before loading those config files to fix the spelling mistakes if it finds any
    If you are still having issues with Repair/Salvage, delete the repair and salvage .yml files in /plugins/mcMMO and restart the server

Version 2.1.129
    Added new subcommand /mmoxpbar disable - Hides all mcMMO XP bars
    New locale string 'Commands.XPBar.DisableAll'
    Added Blackstone to Mining experience tables
    Added Chain to Mining experience tables
    Added Bone Block to Mining experience tables
    Added Cracked Nether Bricks to Mining experience tables
    Added Chiseled Nether Bricks to Mining experience tables
    Added Crying Obsidian to Mining experience tables
    Added Gilded Blackstone to Mining experience tables
    Added Crimson Hyphae to Woodcutting experience tables
    Added Stripped Crimson Hyphae to Woodcutting experience tables
    Added Warped Hyphae to Woodcutting experience tables
    Added Stripped Warped Hyphae to Woodcutting experience tables
    Added Shroomlight to Herbalism experience tables
    Added Zoglin to combat experience tables
    Added Redstone Dust to bonus drops for Mining ( edit config.yml )
    Lodestone will now be ignored for activating abilities
    Respawn Anchor will now be ignored for activating abilities
    Soul Campfire will now be ignored for activating abilities

    Edit your experience.yml or delete it to generate a new one
    Edit config.yml and add Redstone_Dust under bonus drops for Mining, you could delete it to generate a new one but MySQL data is stored here
